--- a/src/app/studentinformationsystem/studentinformationsystem.component.html
+++ b/src/app/studentinformationsystem/studentinformationsystem.component.html
@@ -1,1 +1,6 @@
 <p>studentinformationsystem works!</p>
+<div class="container">
+    <h2>Student Information System</h2>
+    <p>This section provides details about the Student Information System.</p>
+    <!-- Add your content here -->
+  </div>
