--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
           <label for="password" class="form-label">Password</label>
           <input type="password" class="form-control" id="password" placeholder="Enter your password">
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" [routerLink]="['/home']" class="btn btn-primary">Login</button>
         <div class="mt-3 d-flex justify-content-between">
           <a href="#" class="text-decoration-none">Forgot Password?</a>
           <a href="signup" class="text-decoration-none">Create New Account</a>
