--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -13,7 +13,7 @@
             <div class="card-body">
               <i class="bi bi-laptop display-4 mb-3"></i>
               <h5 class="card-title">
-                <button class="btn btn-primary w-100" routerLink="studentinformationsystem" routerLinkActive="active">Student Information System</button>
+                <button class="btn btn-primary w-100" routerLink="studentattendence" routerLinkActive="active">Student Attendence</button>
               </h5>
             </div>
           </div>
@@ -23,7 +23,7 @@
             <div class="card-body">
               <i class="bi bi-brush display-4 mb-3"></i>
               <h5 class="card-title">
-                <button class="btn btn-primary w-100" routerLink="facultyinformation" routerLinkActive="active">Faculty Information</button>
+                <button class="btn btn-primary w-100" routerLink="studentexams" routerLinkActive="active">Student Exams</button>
               </h5>
             </div>
           </div>
@@ -33,7 +33,7 @@
             <div class="card-body">
               <i class="bi bi-brush display-4 mb-3"></i>
               <h5 class="card-title">
-                <button class="btn btn-primary w-100" routerLink="acadamicperformance" routerLinkActive="active">Academic Performance</button>
+                <button class="btn btn-primary w-100" routerLink="backlogs" routerLinkActive="active">Backlogs</button>
               </h5>
             </div>
           </div>
@@ -43,7 +43,7 @@
             <div class="card-body">
               <i class="bi bi-brush display-4 mb-3"></i>
               <h5 class="card-title">
-                <button class="btn btn-primary w-100" routerLink="attendenceanalysis" routerLinkActive="active">Attendance Analysis</button>
+                <button class="btn btn-primary w-100" routerLink="placementhighsalaries" routerLinkActive="active">Placement High Salaries</button>
               </h5>
             </div>
           </div>
@@ -53,7 +53,67 @@
             <div class="card-body">
               <i class="bi bi-brush display-4 mb-3"></i>
               <h5 class="card-title">
-                <button class="btn btn-primary w-100" routerLink="placementsanalysis" routerLinkActive="active">Placements Analysis</button>
+                <button class="btn btn-primary w-100" routerLink="totalplacements" routerLinkActive="active">Total Placements</button>
+              </h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <i class="bi bi-brush display-4 mb-3"></i>
+              <h5 class="card-title">
+                <button class="btn btn-primary w-100" routerLink="hetakeoff" routerLinkActive="active">HE Takeoff</button>
+              </h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <i class="bi bi-brush display-4 mb-3"></i>
+              <h5 class="card-title">
+                <button class="btn btn-primary w-100" routerLink="he90percentile" routerLinkActive="active">HE 90 Percentile</button>
+              </h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <i class="bi bi-brush display-4 mb-3"></i>
+              <h5 class="card-title">
+                <button class="btn btn-primary w-100" routerLink="startups" routerLinkActive="active">Start Ups</button>
+              </h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <i class="bi bi-brush display-4 mb-3"></i>
+              <h5 class="card-title">
+                <button class="btn btn-primary w-100" routerLink="facultywithph.d" routerLinkActive="active">Faculty with Ph.D</button>
+              </h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <i class="bi bi-brush display-4 mb-3"></i>
+              <h5 class="card-title">
+                <button class="btn btn-primary w-100" routerLink="fulltimers" routerLinkActive="active">Full Time RS</button>
+              </h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <i class="bi bi-brush display-4 mb-3"></i>
+              <h5 class="card-title">
+                <button class="btn btn-primary w-100" routerLink="zeropublicationsfaculty" routerLinkActive="active">Zero Publications Faculty</button>
               </h5>
             </div>
           </div>
@@ -63,7 +123,7 @@
             <div class="card-body">
               <i class="bi bi-phone display-4 mb-3"></i>
               <h5 class="card-title">
-                <button class="btn btn-primary w-100" routerLink="acadamiccalender" routerLinkActive="active">Academic Calendar</button>
+                <button class="btn btn-primary w-100" routerLink="schoolgrade" routerLinkActive="active">School Grade</button>
               </h5>
             </div>
           </div>
