--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,12 +2,12 @@
   background-color: black;
   color: white;
   text-align: center;
-  padding: 45px;
+  padding: 10px;
 }
   .footer a {
     color: #ffffff;
     text-decoration: none;
-    margin: 0 10px;
+    margin: 10px;
   }
   
   .footer a:hover {
